Add missing translations for download/copy actions

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -19,6 +19,8 @@
     "duplicate": "Duplicate",
     "share": "Share",
     "copy": "Copy",
+    "copied": "Copied",
+    "download": "Download",
     "paste": "Paste",
     "undo": "Undo",
     "redo": "Redo",
