--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -19,6 +19,8 @@
     "duplicate": "Duplicera",
     "share": "Dela",
     "copy": "Kopiera",
+    "copied": "Kopierad",
+    "download": "Ladda ner",
     "paste": "Klistra in",
     "undo": "Ångra",
     "redo": "Gör om",
