Add time granularity support (day/week/month/quarter) - Part 1

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -147,6 +147,12 @@
     "ringLabel": "Ring *",
     "activityLabel": "Activity *",
     "labelLabel": "Label",
+    "granularityLabel": "Time Precision",
+    "granularityDay": "Day",
+    "granularityWeek": "Week",
+    "granularityMonth": "Month",
+    "granularityQuarter": "Quarter",
+    "granularityHint": "Zoom in on a month for day precision",
     "linkToWheelTitle": "Link to Another Wheel",
     "selectWheelLabel": "Select Wheel",
     "noLinkOption": "No link",
