--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -147,6 +147,12 @@
     "ringLabel": "Ring *",
     "activityLabel": "Aktivitet *",
     "labelLabel": "Etikett",
+    "granularityLabel": "Tidsprecision",
+    "granularityDay": "Dag",
+    "granularityWeek": "Vecka",
+    "granularityMonth": "Månad",
+    "granularityQuarter": "Kvartal",
+    "granularityHint": "Zooma in på en månad för dagsprecision",
     "linkToWheelTitle": "Länka till ett annat hjul",
     "selectWheelLabel": "Välj hjul",
     "noLinkOption": "Ingen länk",
