Remove all emojis from AI Assistant UI and user-facing messages, improve greeting clarity

--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -258,9 +258,9 @@
   },
   "aiAssistant": {
     "title": "AI Assistent",
-    "greeting": "Hej! ✨\n\nJag kan hjälpa dig med ditt årshjul **\"{{title}}\"** ({{year}}).\n\n**Jag kan:**\n- Skapa, uppdatera och ta bort aktiviteter\n- Visa och söka efter aktiviteter på årshjulet\n- Hantera ringar, aktivitetsgrupper och etiketter\n\n**Struktur:**\n- Ringar: {{rings}}\n- Grupper: {{activityGroups}}\n- Aktiviteter: {{items}}\n\nVad vill du göra?",
-    "error": "**Fel:** {{message}}\n\nFörsök igen.",
-    "loading": "Jag jobbar på...",
+    "greeting": "Hej! Jag hjälper dig med **{{title}}** ({{year}}).\n\nDitt hjul har just nu {{rings}} ringar, {{activityGroups}} grupper och {{items}} aktiviteter.\n\nBerätta vad du vill göra med naturligt språk!",
+    "error": "Fel: {{message}}\n\nFörsök igen.",
+    "loading": "Arbetar...",
     "placeholder": "Vad vill du göra? (t.ex. skapa julkampanj...)",
     "noSession": "Ingen aktiv session",
     "edgeFunctionError": "Edge function call failed"
