Add Presentation Mode menu item to editor

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -146,6 +146,7 @@
     "sharingLinks": "Sharing Links",
     "copyPreviewLink": "Copy preview link",
     "previewLinkDesc": "For sharing with others",
+    "presentationMode": "Presentation Mode",
     "copyEmbedLink": "Copy embed link",
     "embedLinkDesc": "For PowerPoint, Word, websites",
     "imageExport": "Image Export",
