--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -146,6 +146,7 @@
     "sharingLinks": "Delningslänkar",
     "copyPreviewLink": "Kopiera förhandsgranskningslänk",
     "previewLinkDesc": "För delning med andra",
+    "presentationMode": "Presentationsläge",
     "copyEmbedLink": "Kopiera inbäddningslänk",
     "embedLinkDesc": "För PowerPoint, Word, webbsidor",
     "imageExport": "Bildexport",
