Improve mobile editor UX

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -162,6 +162,7 @@
     "versionHistory": "Show version history",
     "history": "History",
     "aiAssistant": "AI Assistant",
+    "moreOptions": "More options",
     "saving": "Saving...",
     "saveToDatabase": "Save to database",
     "saveToBrowser": "Save to browser storage",
