--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -162,6 +162,7 @@
     "versionHistory": "Visa versionshistorik",
     "history": "Historik",
     "aiAssistant": "AI Assistent",
+    "moreOptions": "Fler alternativ",
     "saving": "Sparar...",
     "saveToDatabase": "Spara till databas",
     "saveToBrowser": "Spara till webbläsarlagring",
