Add copy link button to QR modal

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -309,9 +309,11 @@
     "qrTitle": "Cast to screen",
     "qrSubtitle": "Scan the QR code with another device that has a larger screen",
     "qrError": "Could not generate QR code",
-    "qrStep1": "Open the camera on your iPad, laptop, Apple TV or other display device",
-    "qrStep2": "Scan the QR code above",
+    "qrStep1": "On another device: open camera or browser",
+    "qrStep2": "Scan QR code or copy the link below",
     "qrStep3": "The wheel displays in fullscreen while you control from your phone",
+    "copyLink": "Copy link",
+    "linkCopied": "Link copied!",
     "casting": "Casting",
     "connectionError": "Connection error",
     "startingReceiver": "Starting receiver...",
