--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -309,9 +309,11 @@
     "qrTitle": "Casta till skärm",
     "qrSubtitle": "Skanna QR-koden med en annan enhet som har en större skärm",
     "qrError": "Kunde inte generera QR-kod",
-    "qrStep1": "Öppna kameran på din iPad, laptop, Apple TV eller annan skärmenhet",
-    "qrStep2": "Skanna QR-koden ovan",
+    "qrStep1": "På en annan enhet: öppna kameran eller webbläsaren",
+    "qrStep2": "Skanna QR-koden eller kopiera länken nedan",
     "qrStep3": "Hjulet visas i helskärm medan du styr från din telefon",
+    "copyLink": "Kopiera länk",
+    "linkCopied": "Länk kopierad!",
     "casting": "Castar",
     "connectionError": "Fel vid anslutning",
     "startingReceiver": "Startar mottagare...",
