Replace QR code with 6-character pairing codes

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -304,21 +304,26 @@
   },
   "cast": {
     "castToScreen": "Cast to screen",
-    "closeQR": "Close QR code",
+    "closeQR": "Close",
     "castingClickToStop": "Casting • Click to stop",
-    "qrTitle": "Cast to screen",
-    "qrSubtitle": "Scan the QR code with another device that has a larger screen",
-    "qrError": "Could not generate QR code",
-    "qrStep1": "On another device: open camera or browser",
-    "qrStep2": "Scan QR code or copy the link below",
-    "qrStep3": "The wheel displays in fullscreen while you control from your phone",
-    "copyLink": "Copy link",
-    "linkCopied": "Link copied!",
+    "pairingCodeTitle": "Cast to screen",
+    "pairingCodeSubtitle": "Enter this code on your TV",
+    "pairingCode": "Pairing Code",
+    "codeStep1": "Open your TV or larger screen",
+    "codeStep2": "Go to yearwheel.se/cast-receiver",
+    "codeStep3": "Enter the code above using your remote control",
+    "copyCode": "Copy code",
+    "codeCopied": "Code copied!",
+    "receiverUrl": "Receiver URL",
+    "enterPairingCode": "Enter Pairing Code",
+    "enterCodeFromPhone": "Type the 6-character code shown on your phone",
+    "connect": "Connect",
+    "codeHelpText": "You can find the code in the casting menu on your phone",
+    "connectingWithCode": "Connecting with code...",
     "casting": "Casting",
     "connectionError": "Connection error",
     "startingReceiver": "Starting receiver...",
     "waitingForConnection": "Waiting for connection...",
-    "scanQRFromIOS": "Scan the QR code from your iPhone/iPad",
     "startCastingFromMobile": "Start casting from your mobile device",
     "disconnected": "Disconnected",
     "castingEnded": "Casting has ended",
