--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -304,21 +304,26 @@
   },
   "cast": {
     "castToScreen": "Casta till skärm",
-    "closeQR": "Stäng QR-kod",
+    "closeQR": "Stäng",
     "castingClickToStop": "Castar • Klicka för att stoppa",
-    "qrTitle": "Casta till skärm",
-    "qrSubtitle": "Skanna QR-koden med en annan enhet som har en större skärm",
-    "qrError": "Kunde inte generera QR-kod",
-    "qrStep1": "På en annan enhet: öppna kameran eller webbläsaren",
-    "qrStep2": "Skanna QR-koden eller kopiera länken nedan",
-    "qrStep3": "Hjulet visas i helskärm medan du styr från din telefon",
-    "copyLink": "Kopiera länk",
-    "linkCopied": "Länk kopierad!",
+    "pairingCodeTitle": "Casta till skärm",
+    "pairingCodeSubtitle": "Ange denna kod på din TV",
+    "pairingCode": "Parkopplingskod",
+    "codeStep1": "Öppna din TV eller större skärm",
+    "codeStep2": "Gå till yearwheel.se/cast-receiver",
+    "codeStep3": "Ange koden ovan med fjärrkontrollen",
+    "copyCode": "Kopiera kod",
+    "codeCopied": "Kod kopierad!",
+    "receiverUrl": "Mottagarlänk",
+    "enterPairingCode": "Ange parkopplingskod",
+    "enterCodeFromPhone": "Skriv in den 6-siffriga koden som visas på din telefon",
+    "connect": "Anslut",
+    "codeHelpText": "Du kan hitta koden i casting-menyn på din telefon",
+    "connectingWithCode": "Ansluter med kod...",
     "casting": "Castar",
     "connectionError": "Fel vid anslutning",
     "startingReceiver": "Startar mottagare...",
     "waitingForConnection": "Väntar på anslutning...",
-    "scanQRFromIOS": "Skanna QR-koden från din iPhone/iPad",
     "startCastingFromMobile": "Starta casting från din mobila enhet",
     "disconnected": "Frånkopplad",
     "castingEnded": "Castingen har avslutats",
