--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -320,6 +320,7 @@
     "connect": "Anslut",
     "codeHelpText": "Du kan hitta koden i casting-menyn på din telefon",
     "connectingWithCode": "Ansluter med kod...",
+    "controlFromPhone": "Styr hjulet från din telefon",
     "casting": "Castar",
     "connectionError": "Fel vid anslutning",
     "startingReceiver": "Startar mottagare...",
