Full width receiver, hide controls, add logo, Android code cast

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -322,6 +322,7 @@
     "connectingWithCode": "Connecting with code...",
     "connecting": "Connecting...",
     "controlFromPhone": "Control the wheel from your phone",
+    "castWithCode": "Cast with code",
     "casting": "Casting",
     "connectionError": "Connection error",
     "startingReceiver": "Starting receiver...",
