--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -322,6 +322,7 @@
     "connectingWithCode": "Ansluter med kod...",
     "connecting": "Ansluter...",
     "controlFromPhone": "Styr hjulet från din telefon",
+    "castWithCode": "Casta med kod",
     "casting": "Castar",
     "connectionError": "Fel vid anslutning",
     "startingReceiver": "Startar mottagare...",
