Fix cast UI and connection flow
- Remove syntax error in YearWheel
- Replace emojis with logo in receiver
- Show active code in phone modal
- Pass rotation state to cast

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -323,6 +323,8 @@
     "connecting": "Connecting...",
     "controlFromPhone": "Control the wheel from your phone",
     "castWithCode": "Cast with code",
+    "tvConnected": "TV screen is connected",
+    "waitingForTV": "Waiting for TV to enter the code",
     "casting": "Casting",
     "connectionError": "Connection error",
     "startingReceiver": "Starting receiver...",
