Improve cast UX and connection flow
- Persist pairing code (don't regenerate on reopen)
- Auto-minimize modal when connected
- Show clear status (waiting → connected)
- Hide instructions when connected
- Add guidance: 'You can close this and continue'
- Minimized indicator shows 'Castar' badge

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -325,6 +325,7 @@
     "castWithCode": "Cast with code",
     "tvConnected": "TV screen is connected",
     "waitingForTV": "Waiting for TV to enter the code",
+    "connectedYouCanClose": "Connected! You can close this and continue using the wheel",
     "casting": "Casting",
     "connectionError": "Connection error",
     "startingReceiver": "Starting receiver...",
