Add zoom/rotation controls to mobile presentation panel

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -10,7 +10,13 @@
     "innerRings": "Inner Rings",
     "outerRings": "Outer Rings",
     "activityGroups": "Activity Groups",
-    "labels": "Labels"
+    "labels": "Labels",
+    "viewControls": "View Controls",
+    "rotation": "Rotation",
+    "zoomLevel": "Zoom Level",
+    "fullYear": "Full Year",
+    "quarterView": "Quarter View",
+    "monthView": "Month View"
   },
   "tabs": {
     "disc": "Disc",
