--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -10,7 +10,13 @@
     "innerRings": "Inre Ringar",
     "outerRings": "Yttre Ringar",
     "activityGroups": "Aktivitetsgrupper",
-    "labels": "Etiketter"
+    "labels": "Etiketter",
+    "viewControls": "Vyinställningar",
+    "rotation": "Rotation",
+    "zoomLevel": "Zoomnivå",
+    "fullYear": "Hela året",
+    "quarterView": "Kvartalvy",
+    "monthView": "Månadsvy"
   },
   "tabs": {
     "disc": "Skiva",
