Keep cast modal open - let user close manually

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -334,6 +334,7 @@
     "disconnected": "Disconnected",
     "castingEnded": "Casting has ended",
     "connected": "Connected",
-    "disconnect": "Disconnect"
+    "disconnect": "Disconnect",
+    "closeAndKeepCasting": "Close (keep casting)"
   }
 }
