Fix Chromecast button visibility and add rotation controls
- Only show Chromecast button when devices are available (fixes blank button issue on Android)
- Add device availability polling (checks every 3 seconds)
- Add rotation controls to PresentationControlDialog (15° left/right, reset to 0°)
- Pass rotation props from PreviewWheelPage to control dialog
- Add i18n strings for rotation controls (sv/en)
- Code optimization and improved Cast button logic

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -36,6 +36,12 @@
     "reload": "Reload",
     "goBack": "Go back"
   },
+  "controls": {
+    "rotation": "Rotation",
+    "rotateLeft": "Rotate left",
+    "rotateRight": "Rotate right",
+    "resetRotation": "Reset rotation"
+  },
   "time": {
     "justNow": "Just now",
     "minutesAgo": "{{count}}m ago",
