Add mobile zoom controls for casting and fix display zoom sync

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -348,6 +348,7 @@
     "showControls": "Show controls",
     "hideControls": "Hide controls",
     "displaySettings": "Display Settings",
-    "displayZoom": "Display Zoom"
+    "displayZoom": "Display Zoom",
+    "stopCasting": "Stop Casting"
   }
 }
