--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -347,6 +347,7 @@
     "showControls": "Visa kontroller",
     "hideControls": "Dölj kontroller",
     "displaySettings": "Visningsinställningar",
-    "displayZoom": "Bildskärmszoom"
+    "displayZoom": "Bildskärmszoom",
+    "stopCasting": "Stoppa casting"
   }
 }
