Add cast item display, realtime updates, white bg, fix Q1/Jan zoom

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -349,6 +349,8 @@
     "hideControls": "Hide controls",
     "displaySettings": "Display Settings",
     "displayZoom": "Display Zoom",
-    "stopCasting": "Stop Casting"
+    "stopCasting": "Stop Casting",
+    "showItemsOnTV": "Show Items on TV",
+    "noVisibleItems": "No visible items to display"
   }
 }
