Add i18n translations for cast item display overlay

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -351,6 +351,13 @@
     "displayZoom": "Display Zoom",
     "stopCasting": "Stop Casting",
     "showItemsOnTV": "Show Items on TV",
-    "noVisibleItems": "No visible items to display"
+    "noVisibleItems": "No visible items to display",
+    "showOnTV": "Show",
+    "hideFromTV": "Hide",
+    "ring": "Ring",
+    "category": "Category",
+    "label": "Label",
+    "start": "Start",
+    "end": "End"
   }
 }
