Add Cmd/Ctrl+Click shortcut for multi-select mode

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -299,7 +299,7 @@
   "selection": {
     "enterMode": "Select multiple",
     "exitMode": "Exit selection",
-    "enterModeTooltip": "Select multiple activities",
+    "enterModeTooltip": "Select multiple activities (or Cmd/Ctrl+Click)",
     "exitModeTooltip": "Exit selection mode",
     "selected": "{{count}} selected",
     "selectedOne": "{{count}} selected",
