Add batch create for recurring activities

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -157,10 +157,24 @@
     "startDateLabel": "Start Date *",
     "startDateRequired": "Start date is required",
     "endDateLabel": "End Date *",
+    "recurringEndDateLabel": "End Date (repeats until) *",
     "endDateRequired": "End date is required",
     "endDateInvalid": "End date must be after start date",
     "timeLabel": "Time",
     "timePlaceholder": "e.g., 09:00 - 17:00",
+    "recurringLabel": "Recurring Activity",
+    "recurringFrequencyLabel": "Frequency",
+    "recurringDurationLabel": "Duration per instance",
+    "weekly": "Weekly",
+    "monthly": "Monthly",
+    "quarterly": "Quarterly",
+    "duration1day": "1 day",
+    "duration2days": "2 days",
+    "duration3days": "3 days",
+    "duration1week": "1 week",
+    "duration2weeks": "2 weeks",
+    "recurringPreview": "Will create {{count}} activities:",
+    "andMore": "...and {{count}} more",
     "cancel": "Cancel",
     "addItem": "Add Item"
   },
@@ -187,6 +201,8 @@
     "endDateInvalid": "End date must be after start date",
     "timeLabel": "Time",
     "timePlaceholder": "e.g., 09:00 - 17:00",
+    "recurringNotice": "Recurring Activity",
+    "recurringNoticeText": "This is part of a recurring activity series. Changes will only affect this instance.",
     "deleteButton": "Delete",
     "cancel": "Cancel",
     "save": "Save",
