--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -157,10 +157,24 @@
     "startDateLabel": "Startdatum *",
     "startDateRequired": "Startdatum är obligatoriskt",
     "endDateLabel": "Slutdatum *",
+    "recurringEndDateLabel": "Slutdatum (upprepar till) *",
     "endDateRequired": "Slutdatum är obligatoriskt",
     "endDateInvalid": "Slutdatum måste vara efter startdatum",
     "timeLabel": "Tid",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
+    "recurringLabel": "Återkommande aktivitet",
+    "recurringFrequencyLabel": "Frekvens",
+    "recurringDurationLabel": "Varaktighet per tillfälle",
+    "weekly": "Varje vecka",
+    "monthly": "Varje månad",
+    "quarterly": "Varje kvartal",
+    "duration1day": "1 dag",
+    "duration2days": "2 dagar",
+    "duration3days": "3 dagar",
+    "duration1week": "1 vecka",
+    "duration2weeks": "2 veckor",
+    "recurringPreview": "Kommer att skapa {{count}} aktiviteter:",
+    "andMore": "...och {{count}} till",
     "cancel": "Avbryt",
     "addItem": "Lägg till händelse"
   },
@@ -187,6 +201,8 @@
     "endDateInvalid": "Slutdatum måste vara efter startdatum",
     "timeLabel": "Tid",
     "timePlaceholder": "t.ex., 09:00 - 17:00",
+    "recurringNotice": "Återkommande aktivitet",
+    "recurringNoticeText": "Detta är en del av en återkommande aktivitetsserie. Ändringar påverkar endast denna instans.",
     "deleteButton": "Radera",
     "cancel": "Avbryt",
     "save": "Spara",
