Add interactive Quick Start Guide

--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -265,6 +265,7 @@
     "product": "Produkt",
     "features": "Funktioner",
     "pricing": "Priser",
+    "quickStart": "Snabbstartsguide",
     "company": "Företag",
     "about": "Om oss",
     "contact": "Kontakt",
