--- a/src/i18n/locales/en/landing.json
+++ b/src/i18n/locales/en/landing.json
@@ -266,6 +266,7 @@
     "product": "Product",
     "features": "Features",
     "pricing": "Pricing",
+    "quickStart": "Quick Start Guide",
     "company": "Company",
     "about": "About us",
     "contact": "Contact",
