--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -174,6 +174,8 @@
     "saveToDatabase": "Spara till databas",
     "saveToBrowser": "Spara till webbläsarlagring",
     "showGuide": "Visa snabbguide",
+  "startTour": "Starta snabbguide",
+  "aiTour": "Starta AI-guide",
     "template": "Template",
     "markAsTemplate": "Markera som template",
     "templateWheelVisibleOnLanding": "Template-hjul (synligt på startsidan)",
