--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -5,7 +5,9 @@
     "pricing": "Priser",
     "comparison": "Jämförelse",
     "login": "Logga in",
-    "getStarted": "Kom igång gratis"
+    "getStarted": "Kom igång gratis",
+    "openMenu": "Öppna meny",
+    "closeMenu": "Stäng meny"
   },
   "philosophy": {
     "text": "Planering är cyklisk – aktiviteter återkommer, processer upprepas och mönster framträder. YearWheel hjälper dig att se sambanden mellan åren, skapa struktur och bygga vidare på tidigare erfarenheter."
